# mcp-tools-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  server.py
app/core/: auth.py  config.py  logging.py  settings.py
app/data/: demo.db
app/resources/: docs.py
app/tools/: __init__.py  database.py  errors.py  files.py  search.py  seed.py
data/: search_index.json
data/docs/: notes.md  pipeline.md  prompts.txt
tests/: conftest.py  test_concurrency.py  test_config.py  test_database.py  test_files.py  test_http_auth.py  test_mcp_integration.py  test_search.py  test_settings.py
